--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,12 +49,12 @@ dist.jar=${dist.dir}/prjSPOSLicence.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.log4j-1.2.17.jar=E:\\My Workspace\\SPOS\\LatestLib\\log4j-1.2.17.jar
-file.reference.prjSPOSGlobal.jar=E:\\My Workspace\\SPOS\\LatestLib\\prjSPOSGlobal.jar
+file.reference.logback.jar=E:\\project\\recent spos src\\spos\\LatestLib\\logback.jar
+file.reference.prjSPOSGlobal.jar=E:\\project\\recent spos src\\spos\\LatestLib\\prjSPOSGlobal.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.logback.jar}:\
     ${file.reference.prjSPOSGlobal.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
