--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,8 +49,8 @@ dist.jar=${dist.dir}/prjSPOSLicence.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.logback.jar=E:\\project\\recent spos src\\spos\\LatestLib\\logback.jar
-file.reference.prjSPOSGlobal.jar=E:\\project\\recent spos src\\spos\\LatestLib\\prjSPOSGlobal.jar
+file.reference.logback.jar=E:\\My Workspace\\SPOS\\LatestLib\\logback.jar
+file.reference.prjSPOSGlobal.jar=E:\\My Workspace\\SPOS\\LatestLib\\prjSPOSGlobal.jar
 includes=**
 jar.compress=false
 javac.classpath=\
